Fix pre tag overflow

--- a/src/styles/utils.module.css
+++ b/src/styles/utils.module.css
@@ -58,3 +58,7 @@
 .alignCenter {
   text-align: center;
 }
+
+.mx10 {
+  margin: 0 10px;
+}
